@startuml
skinparam style strictuml
' Design-level: Abstract Factory (DAO) + Strategy (buono) + Observer + Singleton
' --- Abstract Factory persistenza ---
abstract "DAOFactory" as DF {
  +getUtenteDAO()
  +getProdottoDAO()
  +getOrdineDAO()
  +getBuonoDAO()
}
class "DemoDAOFactory" as DemoF
class "FSDAOFactory" as FSF
class "JDBCDAOFactory" as JDBCF
DemoF -up-|> DF
FSF -up-|> DF
JDBCF -up-|> DF
interface "OrdineDAO" as ODAO
interface "BuonoDAO" as BDAO
DemoF ..> ODAO : <<create>>
DemoF ..> BDAO : <<create>>
JDBCF ..> ODAO : <<create>>
JDBCF ..> BDAO : <<create>>

' --- Strategy buono promozionale ---
class "Ordine" as Ord {
  -totale: double
  +applicaBuono(BuonoPromozionale)
  +ricalcolaTotale()
}
class "BuonoPromozionale" as B {
  -codice: String
  -dataScadenza: LocalDate
  +applicaSconto(double)
}
interface "ScontoStrategy" as SS {
  +applicaSconto(double): double
  +getTipo(): String
}
class "ScontoPercentualeStrategy" as SP
class "ScontoImportoFissoStrategy" as SF
class "ScontoStrategyFactory" as SSF {
  {static} +createStrategy(String, double): ScontoStrategy
}
Ord --> B : applica
B --> SS
SP -up-|> SS
SF -up-|> SS
SSF ..> SP : <<create>>
SSF ..> SF : <<create>>

' --- Observer (notifica venditore) ---
class "OrdineSubject" as OS
interface "OrdineEventListener" as EL {
  +update(Ordine)
}
class "VenditoreNotifier" as VN
OS o-- Ord : soggetto
OS --> EL
VN -up-|> EL

' --- Singleton sessione ---
class "SessionManager" as SM {
  -instance: SessionManager
  {static} +getInstance(): SessionManager
}
SM -right-> SM : instance, 1
@enduml
